<resources>
    <string name="add">Add</string>
    <string name="add_new">Add a new place!</string>
    <string name="app_name">Assessment</string>
    <string name="description">Description</string>
    <string name="latitude">Latitude</string>
    <string name="list">List</string>
    <string name="longitude">Longitude</string>
    <string name="name">Name:</string>
    <string name="view_all">View All</string>
</resources>
